--- a/start/inventory/.settings/org.eclipse.wst.common.component
+++ b/start/inventory/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                
+                                            
     
     
     
     
     
     
-    <wb-module deploy-name="openliberty-deepdive-wsl2">
-                                                                
+    
+    
+    
+    <wb-module deploy-name="inventory">
+                                                                                        
+        
+        
+        
         
         
         
@@ -15,7 +21,10 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                
+                                                                                        
+        
+        
+        
         
         
         
@@ -23,7 +32,10 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                
+                                                                                        
+        
+        
+        
         
         
         
@@ -31,11 +43,6 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                                                                 
         
         
@@ -43,9 +50,25 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/liberty"/>
+                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/sandbox-openliberty-deepdive/target/classes"/>
-        <property name="context-root" value="openliberty-deepdive-wsl2"/>
-                                                            
+                
+        <property name="context-root" value="inventory"/>
+                                                                                    
+    
+    
+    
     
     
     
@@ -53,7 +76,10 @@
     
     
     </wb-module>
-                            
+                                        
+
+
+
 
 
 
